# xml_to_elastic

./: .gitignore  Cargo.toml  README.md  USAGE.md  ingest.sh
src/: compter_balises_xml.rs  main.rs  modele.rs  parser.rs  texte.rs
