[package]
name = "xml_to_elastic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tribunal_administratif_paris"
path = "src/main.rs"

[[bin]]
name = "compter_balises_xml"
path = "src/compter_balises_xml.rs"

[dependencies]
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
html-escape = "0.2.13"
lazy_static = "1.5.0"
quick-xml = "0.39.1"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
